# intent-ir

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  llms.txt  pyproject.toml
docs/: agent-ir.md  architecture.md  demo-output.txt  demo-transcript.md  demo.md  index.html  instruction-set.md  packet-format.md  prior-art.md  repo-health.md  roadmap.md  security-model.md
examples/asm/: hello_agent.intentasm  memory_budget.intentasm  repo_scan.intentasm  safe_repo_scan.intentasm  tool_handoff.intentasm  unsafe_budget.intentasm  unsafe_shell.intentasm
examples/hello_agent/: task.json
examples/memory_budgeted_task/: task.json
examples/messages/: hello_agent.json  memory_budget.json  repo_scan.json  safe_repo_scan.json  tool_handoff.json  unsafe_budget.json  unsafe_shell.json
examples/multi_agent_handoff/: task.json
examples/repo_scan/: task.json
examples/safe_tool_call/: task.json
policies/: planner.policy.json  worker.policy.json
site/: index.html  style.css
spec/: agent-ir.schema.json  binary-format.md  grammar.ebnf  intent-ir-v0.1.md  intentasm-v0.1.md  ir-schema.json  message-schema.json  opcodes.md
src/intentir/: __init__.py  agent_runtime.py  assembler.py  binary.py  cli.py  compiler.py  disassembler.py  intentasm_parser.py  (+7 more)
tests/: test_assembler.py  test_compiler.py  test_demo_cli.py  test_parser.py  test_roundtrip.py  test_runtime.py  test_safety_demo.py  test_verifier.py
traces/: hello_agent.trace.jsonl  repo_scan.trace.jsonl  safe_repo_scan.intenttrace.jsonl  unsafe_budget.intenttrace.jsonl  unsafe_shell.intenttrace.jsonl
