[project]
name = "intentir"
version = "0.1.0"
description = "Deterministic, inspectable intermediate representation for AI agents."
authors = [
    {name = "INTENT-IR Contributors"}
]
dependencies = []
requires-python = ">=3.11"

[project.scripts]
intentir = "intentir.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
